# helper-grpc

./: .flake8  .testenv  Makefile  README.md  api.py  auth_app.py  cert.pem  config.py  config.yml  forms.py  key.pem  observer_app.py  planner_app.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: checks.yml  tests.yml
alembic/: env.py
alembic/versions/: 16672c1c8a07_add_user_role.py  46ba7189c503_add.py  60ffc5bbd577_add_user_and_comment_tables.py  7574da15f1ec_initial.py  87a3c496b896_add_tokens.py  923ecae59a25_add_base_model.py  930be4c1252b_plan_table_fixed.py  93fccc07673b_add_default_datetime.py  (+1 more)
apps/: api.py  auth_app.py  observer_app.py  planner_app.py  stats.py
clients/: auth_client.py  observer_client.py  planner_client.py  redis_client.py
db/: base.py  events.py  models.py  user_stats.py  users.py
docker/: Dockerfile.auth  Dockerfile.gateway  Dockerfile.observer  Dockerfile.planner  Dockerfile.prometheus  Dockerfile.stats  Dockerfile.tests  docker-compose-kafka.yml  docker-compose-nginx.yml  docker-compose-prometheus.yml  docker-compose-redis.yml  docker-compose-tests.yml  docker-compose.yml
models/: base.py  event.py  models.py
nginx/: default.conf
protos/: auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  observer.proto  observer_pb2.py  observer_pb2.pyi  observer_pb2_grpc.py  planner.proto  planner_pb2.py  planner_pb2.pyi  planner_pb2_grpc.py
scripts/: create_db.py
service/: auth_service.py  observer_service.py  planner_service.py
tests/: api_test.py  conftest.py  events_test.py  main_test.py  observer_test.py  pytest.ini
utils/: interceptors.py  jwt_utils.py
(+5 files in other folders)
